k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whattodo-service
  namespace: test

spec:
  selector:
    app: whattodo

  type: NodePort
  
  ports:
    - port: 80
      targetPort: 80
