k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whattodo-app-route
  namespace: test
spec:
  parentRefs:
  - name: application-gateway
    namespace: envoy-gateway-system
  hostnames:
  - "app.whattodo.local"
  rules:
  - backendRefs:
    - name: whattodo-service
      port: 80
